--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fastify-secure-session": "^2.3.1",
     "fastify-static": "^4.0.1",
     "form-data": "^4.0.0",
+    "keyv": "^4.0.3",
     "node-fetch": "^2.6.1",
     "sequelize": "^6.5.0",
     "socket.io": "^3.1.2"
