--- a/package.json
+++ b/package.json
@@ -3,36 +3,54 @@
   "version": "1.0.0",
   "description": "Settings server for Discord Tickets",
   "main": "server/index.js",
+  "files": [
+	"dist/"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+	"serve": "vue-cli-service serve",
+	"build": "vue-cli-service build",
+	"lint": "vue-cli-service lint"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/discord-tickets/settings-server.git"
+	"type": "git",
+	"url": "git+https://github.com/discord-tickets/settings-server.git"
   },
   "keywords": [
-    "discord",
-    "tickets",
-    "fastify",
-    "vue"
+	"discord",
+	"tickets",
+	"fastify",
+	"vue"
   ],
   "author": "eartharoid",
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/discord-tickets/settings-server/issues"
+	"url": "https://github.com/discord-tickets/settings-server/issues"
   },
   "homepage": "https://github.com/discord-tickets/settings-server#readme",
   "dependencies": {
-    "fastify": "^3.13.0",
-    "fastify-secure-session": "^2.3.1",
-    "fastify-static": "^4.0.1",
-    "form-data": "^4.0.0",
-    "keyv": "^4.0.3",
-    "node-fetch": "^2.6.1",
-    "sequelize": "^6.5.0",
-    "socket.io": "^3.1.2"
+	"buefy": "^0.9.4",
+	"core-js": "^3.6.5",
+	"fastify": "^3.13.0",
+	"fastify-secure-session": "^2.3.1",
+	"fastify-static": "^4.0.1",
+	"form-data": "^4.0.0",
+	"keyv": "^4.0.3",
+	"node-fetch": "^2.6.1",
+	"socket.io": "^3.1.2",
+	"vue": "^2.6.11",
+	"vue-router": "^3.2.0"
   },
   "devDependencies": {
-    "eslint": "^7.21.0"
+	"@vue/cli-plugin-babel": "~4.5.0",
+	"@vue/cli-plugin-eslint": "~4.5.0",
+	"@vue/cli-plugin-router": "~4.5.0",
+	"@vue/cli-service": "~4.5.0",
+	"@vue/eslint-config-prettier": "^6.0.0",
+	"babel-eslint": "^10.1.0",
+	"eslint": "^6.7.2",
+	"eslint-plugin-prettier": "^3.1.3",
+	"eslint-plugin-vue": "^6.2.2",
+	"prettier": "^1.19.1",
+	"vue-template-compiler": "^2.6.11"
   }
 }
