--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"type": "module",
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^6.1.1",
+		"@tailwindcss/forms": "^0.5.2",
 		"autoprefixer": "^10.4.7",
 		"postcss": "^8.4.14",
 		"svelte-preprocess": "^4.10.7",
