--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@fortawesome/fontawesome-free": "^6.1.1",
 		"@tailwindcss/forms": "^0.5.2",
 		"autoprefixer": "^10.4.7",
+		"emoji-name-map": "^1.2.9",
 		"ms": "^2.1.3",
 		"postcss": "^8.4.14",
 		"svelte-preprocess": "^4.10.7",
