--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"marked": "^4.0.18",
 		"ms": "^2.1.3",
 		"postcss": "^8.4.14",
-		"svelte-dragdroplist": "^1.1.1",
+		"sortablejs": "^1.15.0",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.1.3"
 	}
