--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"ms": "^2.1.3",
 		"postcss": "^8.4.14",
 		"sortablejs": "^1.15.0",
+		"svelte-modals": "1.2.0-beta.0",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.1.3"
 	}
