--- a/package.json
+++ b/package.json
@@ -5,27 +5,28 @@
 		"dev": "vite dev",
 		"build": "vite build",
 		"package": "svelte-kit package",
-		"preview": "svelte-kit preview",
+		"preview": "vite preview",
 		"prepare": "svelte-kit sync",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint .",
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "1.0.0-next.463",
 		"eslint": "^8.22.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"prettier": "^2.7.1",
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.49.0",
-		"vite": "^3.0.9"
+		"vite": "3.1.0-beta.1"
 	},
 	"type": "module",
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^6.1.2",
 		"@tailwindcss/forms": "^0.5.2",
 		"autoprefixer": "^10.4.8",
+		"cookie": "^0.5.0",
 		"emoji-name-map": "^1.2.9",
 		"marked": "^4.0.19",
 		"ms": "^2.1.3",
