--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "1.0.0-next.463",
 		"eslint": "^8.22.0",
 		"eslint-config-prettier": "^8.5.0",
@@ -24,6 +23,7 @@
 	"type": "module",
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^6.1.2",
+		"@sveltejs/adapter-node": "1.0.0-next.88",
 		"@tailwindcss/forms": "^0.5.2",
 		"autoprefixer": "^10.4.8",
 		"cookie": "^0.5.0",
