--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-	"name": "settings",
-	"version": "0.0.1",
+	"name": "@discord-tickets/settings",
+	"private": false,
+	"version": "1.0.0",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
