--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
 	"name": "@discord-tickets/settings",
 	"private": false,
 	"version": "1.0.0",
+	"main": "build/index.js",
+	"files": [
+		"build/"
+	],
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
