--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,6 +3,8 @@
 	"compilerOptions": {
 		"baseUrl": ".",
 		"paths": {
+			"$components": ["src/components"],
+			"$components/*": ["src/components/*"],
 			"$lib": ["src/lib"],
 			"$lib/*": ["src/lib/*"]
 		}
