Use `/settings` as base path

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
 	],
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build",
-		"package": "svelte-kit package",
+		"build": "vite build && node scripts/postbuild",
 		"preview": "vite preview",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint .",
 		"format": "prettier --write --plugin-search-dir=. ."
