--- a/package.json
+++ b/package.json
@@ -14,29 +14,29 @@
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
+		"@sveltejs/adapter-node": "1.0.0-next.88",
 		"@sveltejs/kit": "1.0.0-next.463",
+		"@tailwindcss/forms": "^0.5.3",
+		"autoprefixer": "^10.4.8",
 		"eslint": "^8.23.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"prettier": "^2.7.1",
 		"prettier-plugin-svelte": "^2.7.0",
-		"svelte": "^3.50.0",
+		"svelte": "^3.50.1",
+		"svelte-preprocess": "^4.10.7",
+		"tailwindcss": "^3.1.8",
 		"vite": "3.1.0-beta.1"
 	},
 	"type": "module",
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^6.2.0",
-		"@sveltejs/adapter-node": "1.0.0-next.88",
-		"@tailwindcss/forms": "^0.5.3",
-		"autoprefixer": "^10.4.8",
 		"cookie": "^0.5.0",
 		"emoji-name-map": "^1.2.9",
 		"marked": "^4.1.0",
 		"ms": "^2.1.3",
 		"postcss": "^8.4.16",
 		"sortablejs": "^1.15.0",
-		"svelte-modals": "1.2.0-beta.0",
-		"svelte-preprocess": "^4.10.7",
-		"tailwindcss": "^3.1.8"
+		"svelte-modals": "1.2.0-beta.0"
 	}
 }
