--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@discord-tickets/settings",
 	"private": false,
-	"version": "1.1.3",
+	"version": "1.1.4",
 	"main": "build/index.js",
 	"files": [
 		"build/"
@@ -9,6 +9,7 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && node scripts/postbuild",
+		"prepack": "npm run build",
 		"preview": "vite preview",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint .",
 		"format": "prettier --write --plugin-search-dir=. ."
