--- a/package.json
+++ b/package.json
@@ -1,42 +1,42 @@
 {
 	"name": "@discord-tickets/settings",
 	"private": false,
-	"version": "1.1.6",
+	"version": "1.1.7",
 	"main": "build/index.js",
 	"files": [
 		"build/"
 	],
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build && node scripts/postbuild",
+		"build": "vite build",
 		"prepack": "npm run build",
 		"preview": "vite preview",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint .",
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-node": "1.0.0-next.88",
-		"@sveltejs/kit": "1.0.0-next.463",
+		"@sveltejs/adapter-node": "1.1.4",
+		"@sveltejs/kit": "1.3.9",
 		"@tailwindcss/forms": "^0.5.3",
-		"autoprefixer": "^10.4.8",
-		"eslint": "^8.23.0",
-		"eslint-config-prettier": "^8.5.0",
+		"autoprefixer": "^10.4.13",
+		"eslint": "^8.33.0",
+		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"prettier": "^2.7.1",
-		"prettier-plugin-svelte": "^2.7.0",
-		"svelte": "^3.50.1",
+		"prettier": "^2.8.3",
+		"prettier-plugin-svelte": "^2.9.0",
+		"svelte": "^3.55.1",
 		"svelte-preprocess": "^4.10.7",
-		"tailwindcss": "^3.1.8",
-		"vite": "3.1.0-beta.1"
+		"tailwindcss": "^3.2.4",
+		"vite": "4.0.4"
 	},
 	"type": "module",
 	"dependencies": {
-		"@fortawesome/fontawesome-free": "^6.2.0",
+		"@fortawesome/fontawesome-free": "^6.2.1",
 		"cookie": "^0.5.0",
 		"emoji-name-map": "^1.2.9",
-		"marked": "^4.1.0",
+		"marked": "^4.2.12",
 		"ms": "^2.1.3",
-		"postcss": "^8.4.16",
+		"postcss": "^8.4.21",
 		"sortablejs": "^1.15.0",
 		"svelte-modals": "1.2.0-beta.0"
 	}
