--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@discord-tickets/settings",
 	"private": false,
-	"version": "1.1.7",
+	"version": "1.1.8",
 	"main": "build/index.js",
 	"files": [
 		"build/"
@@ -15,8 +15,8 @@
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-node": "1.1.4",
-		"@sveltejs/kit": "1.3.9",
+		"@sveltejs/adapter-node": "^1.1.4",
+		"@sveltejs/kit": "^1.3.9",
 		"@tailwindcss/forms": "^0.5.3",
 		"autoprefixer": "^10.4.13",
 		"eslint": "^8.33.0",
@@ -27,7 +27,7 @@
 		"svelte": "^3.55.1",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.2.4",
-		"vite": "4.0.4"
+		"vite": "^4.0.4"
 	},
 	"type": "module",
 	"dependencies": {
@@ -38,6 +38,6 @@
 		"ms": "^2.1.3",
 		"postcss": "^8.4.21",
 		"sortablejs": "^1.15.0",
-		"svelte-modals": "1.2.0-beta.0"
+		"svelte-modals": "^1.2.1"
 	}
 }
