--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	"type": "module",
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^6.2.1",
+		"@skyra/discord-components-core": "^3.6.0",
 		"cookie": "^0.5.0",
 		"emoji-name-map": "^1.2.9",
 		"marked": "^4.2.12",
