--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@discord-tickets/settings",
 	"private": false,
-	"version": "1.5.0",
+	"version": "2.0.0",
 	"main": "build/index.js",
 	"files": [
 		"build/"
@@ -39,6 +39,7 @@
 		"ms": "^2.1.3",
 		"postcss": "^8.4.21",
 		"sortablejs": "^1.15.0",
-		"svelte-modals": "^1.2.1"
+		"svelte-modals": "^1.2.1",
+		"svelte-toasts": "^1.1.2"
 	}
 }
