--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"postcss": "^8.4.21",
 		"sortablejs": "^1.15.0",
 		"svelte-modals": "^1.2.1",
-		"svelte-toasts": "^1.1.2"
+		"svelte-toasts": "^1.1.2",
+		"uuid": "^9.0.0"
 	}
 }
