--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@eartharoid/i18n": "2.0.0-alpha.1",
+		"@eartharoid/vite-plugin-i18n": "1.0.0-alpha.1",
 		"@fortawesome/fontawesome-free": "^6.2.1",
-		"@skyra/discord-components-core": "^3.6.0",
+		"@skyra/discord-components-core": "^3.6.1",
 		"cookie": "^0.5.0",
 		"emoji-name-map": "^1.2.9",
 		"marked": "^4.2.12",
