--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"emoji-name-map": "^1.2.9",
 		"marked": "^4.2.12",
 		"ms": "^2.1.3",
+		"negotiator": "^0.6.3",
 		"postcss": "^8.4.21",
 		"sortablejs": "^1.15.0",
 		"svelte-modals": "^1.2.1",
