--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@eartharoid/vite-plugin-i18n": "1.0.0-alpha.1",
 		"@fortawesome/fontawesome-free": "^6.2.1",
 		"@skyra/discord-components-core": "^3.6.1",
+		"big-integer": "^1.6.52",
 		"cookie": "^0.5.0",
 		"emoji-name-map": "^1.2.9",
 		"marked": "^4.2.12",
