--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"private": false,
 	"version": "2.2.3",
 	"main": "build/index.js",
+	"type": "module",
 	"files": [
 		"build/"
 	],
@@ -15,36 +16,38 @@
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-node": "^1.1.4",
-		"@sveltejs/kit": "^1.3.9",
-		"@tailwindcss/forms": "^0.5.3",
-		"autoprefixer": "^10.4.13",
-		"eslint": "^8.33.0",
-		"eslint-config-prettier": "^8.6.0",
-		"eslint-plugin-svelte3": "^4.0.0",
-		"prettier": "^2.8.3",
-		"prettier-plugin-svelte": "^2.9.0",
-		"svelte": "^3.55.1",
-		"svelte-preprocess": "^4.10.7",
-		"tailwindcss": "^3.2.4",
-		"vite": "^4.0.4"
-	},
-	"type": "module",
-	"dependencies": {
 		"@eartharoid/i18n": "2.0.0-alpha.1",
 		"@eartharoid/vite-plugin-i18n": "1.0.0-alpha.1",
-		"@fortawesome/fontawesome-free": "^6.2.1",
+		"@fortawesome/fontawesome-free": "^6.5.2",
 		"@skyra/discord-components-core": "^3.6.1",
+		"@sveltejs/adapter-node": "^5.0.1",
+		"@sveltejs/kit": "^2.5.7",
+		"@sveltejs/vite-plugin-svelte": "^3.1.0",
+		"@tailwindcss/forms": "^0.5.7",
+		"autoprefixer": "^10.4.19",
 		"big-integer": "^1.6.52",
+		"clsx": "^2.1.1",
 		"cookie": "^0.5.0",
 		"emoji-name-map": "^1.2.9",
-		"marked": "^4.2.12",
+		"eslint": "^8.57.0",
+		"eslint-config-prettier": "^8.10.0",
+		"eslint-plugin-svelte": "^2.38.0",
+		"marked": "^4.3.0",
 		"ms": "^2.1.3",
 		"negotiator": "^0.6.3",
-		"postcss": "^8.4.21",
-		"sortablejs": "^1.15.0",
-		"svelte-modals": "^1.2.1",
+		"postcss": "^8.4.38",
+		"prettier": "^2.8.8",
+		"prettier-plugin-svelte": "^2.10.1",
+		"sortablejs": "^1.15.2",
+		"svelte": "^4.2.15",
+		"svelte-modals": "^1.3.0",
+		"svelte-preprocess": "^5.1.4",
 		"svelte-toasts": "^1.1.2",
-		"uuid": "^9.0.0"
+		"tailwind-merge": "^2.3.0",
+		"tailwind-variants": "^0.2.1",
+		"tailwindcss": "^3.4.3",
+		"uuid": "^9.0.1",
+		"vaul-svelte": "^0.3.0",
+		"vite": "^5.2.10"
 	}
 }
