--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@tailwindcss/forms": "^0.5.7",
 		"autoprefixer": "^10.4.19",
 		"big-integer": "^1.6.52",
+		"bits-ui": "^0.21.16",
 		"clsx": "^2.1.1",
 		"cookie": "^0.5.0",
 		"emoji-name-map": "^1.2.9",
