--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@sveltejs/kit": "^2.5.7",
 		"@sveltejs/vite-plugin-svelte": "^3.1.0",
 		"@tailwindcss/forms": "^0.5.7",
+		"@tailwindcss/typography": "^0.5.15",
 		"autoprefixer": "^10.4.19",
 		"big-integer": "^1.6.52",
 		"clsx": "^2.1.1",
