--- a/package.json
+++ b/package.json
@@ -18,37 +18,38 @@
 	"devDependencies": {
 		"@eartharoid/i18n": "2.0.0-alpha.1",
 		"@eartharoid/vite-plugin-i18n": "1.0.0-alpha.1",
-		"@fortawesome/fontawesome-free": "^6.5.2",
+		"@fortawesome/fontawesome-free": "^6.6.0",
 		"@skyra/discord-components-core": "^3.6.1",
-		"@sveltejs/adapter-node": "^5.0.1",
-		"@sveltejs/kit": "^2.5.7",
-		"@sveltejs/vite-plugin-svelte": "^3.1.0",
-		"@tailwindcss/forms": "^0.5.7",
+		"@sveltejs/adapter-node": "^5.2.9",
+		"@sveltejs/kit": "^2.8.1",
+		"@sveltejs/vite-plugin-svelte": "^4.0.1",
+		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
-		"autoprefixer": "^10.4.19",
+		"autoprefixer": "^10.4.20",
 		"big-integer": "^1.6.52",
 		"clsx": "^2.1.1",
 		"cookie": "^0.5.0",
 		"emoji-name-map": "^1.2.9",
-		"eslint": "^8.57.0",
+		"eslint": "^8.57.1",
 		"eslint-config-prettier": "^8.10.0",
-		"eslint-plugin-svelte": "^2.38.0",
+		"eslint-plugin-svelte": "^2.46.0",
 		"marked": "^4.3.0",
 		"ms": "^2.1.3",
-		"negotiator": "^0.6.3",
-		"postcss": "^8.4.38",
-		"prettier": "^2.8.8",
-		"prettier-plugin-svelte": "^2.10.1",
-		"sortablejs": "^1.15.2",
-		"svelte": "^4.2.15",
-		"svelte-modals": "^1.3.0",
-		"svelte-preprocess": "^5.1.4",
+		"negotiator": "^0.6.4",
+		"postcss": "^8.4.49",
+		"prettier": "^3.3.3",
+		"prettier-plugin-svelte": "^3.2.8",
+		"prettier-plugin-tailwindcss": "^0.6.9",
+		"sortablejs": "^1.15.3",
+		"svelte": "^5.2.2",
+		"svelte-modals": "^2.0.0",
+		"svelte-preprocess": "^6.0.3",
 		"svelte-toasts": "^1.1.2",
-		"tailwind-merge": "^2.3.0",
+		"tailwind-merge": "^2.5.4",
 		"tailwind-variants": "^0.2.1",
-		"tailwindcss": "^3.4.3",
+		"tailwindcss": "^3.4.15",
+		"typescript": "^5.6.3",
 		"uuid": "^9.0.1",
-		"vaul-svelte": "^0.3.0",
-		"vite": "^5.2.10"
+		"vite": "^5.4.11"
 	}
 }
