--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
 		"@fortawesome/fontawesome-free": "^6.6.0",
 		"@skyra/discord-components-core": "^3.6.1",
 		"@sveltejs/adapter-node": "^5.2.9",
-		"@sveltejs/kit": "^2.8.1",
-		"@sveltejs/vite-plugin-svelte": "^4.0.1",
+		"@sveltejs/kit": "^2.17.1",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"autoprefixer": "^10.4.20",
@@ -33,15 +33,16 @@
 		"eslint": "^8.57.1",
 		"eslint-config-prettier": "^8.10.0",
 		"eslint-plugin-svelte": "^2.46.0",
+		"jszip": "^3.10.1",
 		"marked": "^4.3.0",
 		"ms": "^2.1.3",
 		"negotiator": "^0.6.4",
 		"postcss": "^8.4.49",
-		"prettier": "^3.3.3",
-		"prettier-plugin-svelte": "^3.2.8",
-		"prettier-plugin-tailwindcss": "^0.6.9",
+		"prettier": "^3.4.2",
+		"prettier-plugin-svelte": "^3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.11",
 		"sortablejs": "^1.15.3",
-		"svelte": "^5.2.2",
+		"svelte": "^5.19.9",
 		"svelte-modals": "^2.0.0",
 		"svelte-multiselect": "11.0.0-rc.1",
 		"svelte-preprocess": "^6.0.3",
@@ -51,6 +52,6 @@
 		"tailwindcss": "^3.4.15",
 		"typescript": "^5.6.3",
 		"uuid": "^9.0.1",
-		"vite": "^5.4.11"
+		"vite": "^6.1.0"
 	}
 }
